# CloneMine

./: .gitignore  .gitmodules  AUDIO_AND_SCENES.md  AUTHENTICATION.md  BUILDING.md  CMakeLists.txt  DISTRIBUTED_DEPLOYMENT.md  FEATURES.md  IMPLEMENTATION.md  MULTIPLAYER.md  MULTIPLAYER_QUICKSTART.md  QUICKSTART.md  README.md  SCRIPTED_COMBAT.md  SECURITY.md  SERVER_ARCHITECTURE.md  SYSTEM_SUMMARY.md  server_config.txt  setup.bat  setup.sh
.github/: CI_CD.md
data/: README.md  class_loader.lua  content_loader.lua
experimental/: .gitignore  CloneMineExperimental.sln  IMPLEMENTATION_STATUS.md  README.md  SHARED_LIBRARY_ARCHITECTURE.md  SOLID_ARCHITECTURE.md
plugins/: README.md  abilities.lua  armor.lua  character_classes.lua  custom_blocks.lua  example.lua  example_add_pets.lua  (+10 more)
src/: CMakeLists.txt  auction_server_main.cpp  character_server_main.cpp  chat_server_main.cpp  client_main.cpp  login_server_main.cpp  main.cpp  quest_server_main.cpp  server_main.cpp
src/ai/: MonsterAI.cpp  MonsterAI.h  Pathfinding.h
src/ai/bosses/: LichAI.cpp  LichAI.h
src/audio/: AudioManager.cpp  AudioManager.h
src/character/: CharacterData.h  ClassSystem.cpp  ClassSystem.h
src/client/: CharacterSelectScreen.cpp  CharacterSelectScreen.h  ClientApplication.cpp  ClientApplication.h  LoginScreen.cpp  LoginScreen.h  NetworkClient.cpp  NetworkClient.h
src/combat/: CombatSystem.cpp  CombatSystem.h  DamageCalculation.cpp  DamageCalculation.h  DamageTypes.h  WeaponSystem.cpp  WeaponSystem.h
src/config/: ServerConfig.h
src/core/: Application.cpp  Application.h  EntityId.h  InputManager.cpp  InputManager.h  Window.cpp  Window.h
src/network/: NetworkMessage.cpp  NetworkMessage.h  PacketEncryption.cpp  PacketEncryption.h  PacketValidator.cpp  PacketValidator.h
src/npcs/: VillagerNPC.cpp  VillagerNPC.h
src/plugin/: LuaSandbox.cpp  LuaSandbox.h  PluginAPI.cpp  PluginAPI.h  PluginManager.cpp  PluginManager.h
src/quest/: QuestData.h
src/rendering/: BlockRenderer.cpp  BlockRenderer.h  EffectRenderer.cpp  EffectRenderer.h  MonsterRenderer.cpp  MonsterRenderer.h  Renderer.cpp  Renderer.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanSwapchain.cpp  VulkanSwapchain.h  WorldRenderer.cpp  WorldRenderer.h
src/rpg/: CharacterClass.cpp  CharacterClass.h  LuaDataLoader.cpp  LuaDataLoader.h  Monster.cpp  Monster.h  RPGDataManager.cpp  RPGDataManager.h  Spell.cpp  Spell.h
src/save/: SaveSystem.cpp  SaveSystem.h
src/scripting/: ScriptedScene.cpp  ScriptedScene.h
src/server/: CPP_REFACTORING_PLAN.md  CharacterServer.cpp  CharacterServer.h  ChatServer.cpp  ChatServer.h  GameServer.cpp  GameServer.h  LoginServer.cpp  LoginServer.h  QuestServer.cpp  QuestServer.h  ServerPlayer.cpp  ServerPlayer.h
src/server/character/Handlers/: CharacterMessageHandler.h  TcpClientHandler.h
src/server/character/Interfaces/: ICharacterRepository.h  ICharacterService.h  IClientHandler.h  IEncryptionService.h  IInputValidator.h  IMessageHandler.h
src/server/character/Models/: Character.h  ServerConfiguration.h
src/server/character/Repositories/: InMemoryCharacterRepository.h
src/server/character/Security/: AesEncryptionService.h
src/server/character/Services/: CharacterService.h  TcpServerListener.h
src/server/character/Validation/: InputValidator.h
src/server/chat/Handlers/: ChatMessageHandler.h  TcpClientHandler.h
src/server/chat/Interfaces/: IChatRepository.h  IChatService.h  IClientHandler.h  IEncryptionService.h  IInputValidator.h  IMessageHandler.h
src/server/chat/Models/: ChatMessage.h  ServerConfiguration.h
src/server/chat/Repositories/: InMemoryChatRepository.h
src/server/chat/Security/: AesEncryptionService.h
src/server/chat/Services/: ChatService.h  TcpServerListener.h
src/server/chat/Validation/: InputValidator.h
src/server/common/: RateLimiter.cpp  RateLimiter.h
src/server/common/Interfaces/: IEncryptionService.h  IPasswordHasher.h
src/server/common/Security/: AesEncryptionService.h  PasswordHasher.h
src/server/game/Handlers/: GameMessageHandler.h  TcpClientHandler.h
src/server/game/Interfaces/: IClientHandler.h  IEncryptionService.h  IGameService.h  IInputValidator.h  IMessageHandler.h  IPlayerRepository.h
src/server/game/Models/: Player.h  ServerConfiguration.h
src/server/game/Repositories/: InMemoryPlayerRepository.h
src/server/game/Security/: AesEncryptionService.h
src/server/game/Services/: GameService.h  TcpServerListener.h
src/server/game/Validation/: InputValidator.h
src/server/login/Handlers/: LoginMessageHandler.h  TcpClientHandler.h
src/server/login/Interfaces/: IAccountRepository.h  IAuthenticationService.h  IClientHandler.h  IEncryptionService.h  IInputValidator.h  IMessageHandler.h  IPasswordHasher.h
src/server/login/Models/: Account.h  LoginResult.h  LoginSession.h  ServerConfiguration.h
src/server/login/Repositories/: InMemoryAccountRepository.h
src/server/login/Security/: AesEncryptionService.h  PasswordHasher.h
src/server/login/Services/: AuthenticationService.h  TcpServerListener.h
src/server/login/Validation/: InputValidator.h
src/server/quest/Handlers/: QuestMessageHandler.h  TcpClientHandler.h
src/server/quest/Interfaces/: IClientHandler.h  IEncryptionService.h  IInputValidator.h  IMessageHandler.h  IProgressRepository.h  IQuestRepository.h  IQuestService.h
src/server/quest/Models/: PlayerQuestProgress.h  Quest.h  QuestType.h  ServerConfiguration.h
src/server/quest/Repositories/: InMemoryProgressRepository.h  InMemoryQuestRepository.h
src/server/quest/Services/: QuestService.h  TcpServerListener.h
src/server/quest/Validation/: InputValidator.h
src/trading/: AuctionHouse.cpp  AuctionHouse.h
src/world/: AuctionTerminal.cpp  AuctionTerminal.h  Block.cpp  Block.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  InteractionSystem.cpp  InteractionSystem.h  Player.cpp  Player.h  TerrainGenerator.cpp  TerrainGenerator.h  World.cpp  World.h
src/world/structures/: Chest.cpp  Chest.h
tests/: CMakeLists.txt
(+187 files in other folders)
